# pl0c

./: .gitignore  LICENSE  README.md  dune-project  pl0c.opam
ast/: ast.ml  ast.mli  dune
east/: dune  east.ml
examples/: README.md  eval_input.pl0  eval_localvariables.pl0  eval_procedures.pl0  fibonacci.pl0  lex_comments.pl0  lex_comments1.pl0  lex_comments2.pl0  lex_integers.pl0  lex_whitespace.pl0  mem2reg_complex.pl0  mem2reg_if.pl0  mem2reg_mixed.pl0  mem2reg_straightline.pl0  mem2reg_while.pl0  opt_constantfolding.pl0  opt_constantfolding1.pl0  opt_constantfolding2.pl0  opt_constantfolding3.pl0  opt_constantfolding_divbyzero.pl0  opt_constantfolding_divbyzero1.pl0  opt_constantfolding_divbyzero2.pl0  opt_constantfolding_overflow.pl0  parse_declarationordering1.pl0  parse_declarationordering2.pl0  parse_declarationordering3.pl0  parse_declarationordering4.pl0  parse_declarationordering5.pl0  parse_declarationordering6.pl0  parse_declarationordering7.pl0  parse_declarationordering8.pl0  parse_declarationordering9.pl0  parse_if.pl0  parse_logicaloperators.pl0  parse_minimal.pl0  parse_missingsemicolon.pl0  parse_multipleprocedures.pl0  parse_nestedblocks.pl0  parse_operatorprecedence.pl0  parse_parens.pl0  (+13 more)
ir/: builder.ml  builder.mli  dune  instr.ml  instr.mli  ir.ml  ir.mli  tac.ml  tac.mli  tac_builder.ml  tac_builder.mli
isel/: dune  isel.ml  isel.mli
lib/: dune
liveness/: dune  liveness.ml  liveness.mli
lower/: dune  lower.ml  lower.mli
mir/: builder.ml  builder.mli  dune  instr.ml  (+4 more)
parse/: dune  lexer.mll  parser.messages  parser.mly  token.ml
(+45 files in other folders)
