(ocamllex lexer)

(menhir
 (modules parser)
 (flags --exn-carries-state --external-tokens Token))

(rule
 (targets parser_messages.ml)
 (deps parser.messages parser.mly)
 (action
  (with-stdout-to
   %{targets}
   (run menhir --compile-errors %{deps}))))

(library
 (name parse)
 (libraries core ast util)
 (preprocess
  (pps ppx_jane)))
